# advanced_Cplusplus

./: .doit.db  .gitignore  README.md  Readme.md  Task.txt  deploy.py  dodo.py
Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Demo.cpp  Loader.hpp  Logger.hpp  Parser.cpp  Parser.hpp  Sorter.cpp  Sorter.hpp  funccos.cpp  funccos.hpp  funcpow.cpp  funcpow.hpp  funcsin.cpp  funcsin.hpp  main.cpp
Calculator/plugins/: CMakeLists.txt  funccos.cpp  funccos.hpp  funcpow.cpp  funcpow.hpp  funcsin.cpp  funcsin.hpp
Calculator/ut/: CMakeLists.txt  test.cpp
Project/: CMakeLists.txt
Project/resources/: res.xml
Project/src/: CMakeLists.txt  Engine.hpp  Ha.hpp  Reader.cpp  Reader.hpp  Tree.cpp  Tree.hpp  Wrapper.hpp  XMLResurce.cpp  XMLResurce.hpp  main.cpp
Project/tests/: CMakeLists.txt  ut.cpp
